# thurso-karate

./: docker-compose.yml
client/: package-lock.json  package.json
client/src/: App.vue
client/src/assets/: main.css
client/src/components/: HelloWorld.vue
client/src/router/: index.js
client/src/views/: CreateKaratekaView.vue  KaratekaView.vue  ListKaratekaView.vue  ModifyKaratekaView.vue  SessionView.vue
server/: pyproject.toml
server/src/: alembic.ini  main.py
server/src/database/: database.py
server/src/database/migrations/: env.py
server/src/database/migrations/versions/: 7e33d4e83d7a_create_a_baseline_migrations.py  e6595d05960d_initial_migration.py
server/src/modules/user/: controller.py  enums.py  model.py  repository.py  schema.py
server/src/restapi/: user.py
