[tool.poetry]
name = "thurso-karate"
version = "0.1.0"
description = ""
authors = ["Jonyorker <jonyorker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
